Starting intermediate decoding

--- a/gpt2_playground.ipynb
+++ b/gpt2_playground.ipynb
@@ -21,22 +21,19 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\NeelR\\Documents\\MIRA\\mech_interp\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "c:\\Users\\NeelR\\Documents\\MIRA\\mech_interp\\lib\\site-packages\\huggingface_hub\\file_download.py:148: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\NeelR\\.cache\\huggingface\\hub\\models--gpt2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
     "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
-    "model = GPT2LMHeadModel.from_pretrained('gpt2')\n",
+    "model = GPT2LMHeadModel.from_pretrained('gpt2', device_map=\"auto\")\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -51,21 +48,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi, my name is R. A. Rangas, and I'm a member of the Black Panther Party. My role as a political activist is to protect the black community, to promote the cause of the Black Panther Party, and to advance\n"
+      "Hi, my name is John. I am a retired Marine who served in\n"
      ]
     }
    ],
    "source": [
     "# using text \"Hi, my name is\" as input\n",
     "# tokenize, call the model, then decode the output\n",
-    "input_text = \"Hi, my name is\"\n",
+    "input_text = \"Hi, my name is John. I am\"\n",
     "input_ids = tokenizer.encode(input_text, return_tensors=\"pt\").to(model.device)\n",
     "# if we want to sample with temperature, we can use\n",
     "# output_ids = model.generate(input_ids, max_length=50, do_sample=True, temperature=0.7, top_k=50, top_p=0.95, num_return_sequences=1)\n",
     "\n",
     "# instead, for greedy decoding:\n",
     "output_ids = model.generate(input_ids,\n",
-    "                            max_length=50,\n",
+    "                            max_length=15,\n",
     "                            do_sample=False,  # Disable sampling\n",
     "                            num_return_sequences=1)\n",
     "# Decode the output text\n",
