Looking at quantized llama2

--- a/intermediate_decoding.ipynb
+++ b/intermediate_decoding.ipynb
@@ -414,12 +414,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "smP4I4V7StbT"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\NeelR\\Documents\\MIRA\\mech_interp\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
+      "source": [
+        "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+        "\n",
+        "model_name_or_path = \"TheBloke/Llama-2-7b-Chat-GPTQ\"\n",
+        "# To use a different branch, change revision\n",
+        "# For example: revision=\"gptq-4bit-64g-actorder_True\"\n",
+        "model = AutoModelForCausalLM.from_pretrained(model_name_or_path,\n",
+        "                                             device_map=\"auto\",\n",
+        "                                             trust_remote_code=False,\n",
+        "                                             revision=\"main\")\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(model_name_or_path, use_fast=True)\n",
+        "\n",
+        "prompt = \"Tell me about AI\"\n",
+        "prompt_template=f'''[INST] <<SYS>>\n",
+        "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe.  Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature. If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\n",
+        "<</SYS>>\n",
+        "{prompt}[/INST]\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "print(\"\\n\\n*** Generate:\")\n",
+        "\n",
+        "input_ids = tokenizer(prompt_template, return_tensors='pt').input_ids.cuda()\n",
+        "output = model.generate(inputs=input_ids, temperature=0.7, do_sample=True, top_p=0.95, top_k=40, max_new_tokens=512)\n",
+        "print(tokenizer.decode(output[0]))\n",
+        "\n",
+        "# Inference can also be done using transformers' pipeline\n",
+        "\n",
+        "print(\"*** Pipeline:\")\n",
+        "pipe = pipeline(\n",
+        "    \"text-generation\",\n",
+        "    model=model,\n",
+        "    tokenizer=tokenizer,\n",
+        "    max_new_tokens=512,\n",
+        "    do_sample=True,\n",
+        "    temperature=0.7,\n",
+        "    top_p=0.95,\n",
+        "    top_k=40,\n",
+        "    repetition_penalty=1.1\n",
+        ")\n",
+        "\n",
+        "print(pipe(prompt_template)[0]['generated_text'])"
+      ]
     }
   ],
   "metadata": {
